--- a/index.html
+++ b/index.html
@@ -9,19 +9,24 @@
 
   <body>
     <header>
-      <a href="">WEBSTYDIO</a>
-
       <nav>
+        <a href="./index.html">WEBSTYDIO</a>
         <ul>
-          <li>Studio</li>
-          <li>Portfolio</li>
-          <li>Contacts</li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
 
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
       </address>
     </header>
 
@@ -138,7 +143,7 @@
     </main>
 
     <footer>
-      <a href="">WEBSTYDIO</a>
+      <a href="./index.html">WEBSTYDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
